--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,11 @@
         {% endblock %}
     </head>
     <body>
+        <header>
+            {% include 'default/_navbar.html.twig' %}
+        </header>
+
+
         {% block body %}{% endblock %}
     </body>
 </html>
