--- a/templates/default/_navbar.html.twig
+++ b/templates/default/_navbar.html.twig
@@ -2,29 +2,25 @@
     Navbar.
 #}
 
-<nav class="">
-	<a
-		href="{{ url('homepage') }}" class="">
-        Homepage
-	</a>
-	<div class="" >
-		<ul class="">
-			<li class="">
-				{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-					<a href="{{ url('app_logout') }}" class="" title="{{ 'action_logout' }}">
-						{{ 'action_logout' }}
-					</a>
-				{% else %}
-					<a href="{{ url('app_login') }}" class="" title="{{ 'action_login' }}">
-						{{ 'action_login' }}
-					</a>
-				</li>
-			</li>
-			<li>
-				<a href="{{ url('app_register') }}" class="" title="{{ 'action_login'}}">
-					{{ 'action_register' }}
-				</a>
-			{% endif %}
+
+<ul class="nav justify-content-start">
+	<li class="nav-item">
+		<a class="nav-link" href="{{ url('homepage') }}">Generator</a>
+	</li>
+	<li class="nav-item">
+		{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+			<a class="nav-link" href="{{ url('app_logout') }}" class="">
+				Wyloguj
+			</a>
+		{% else %}
+			<a class="nav-link" href="{{ url('app_login') }}" class="">
+				Zaloguj
+			</a>
 		</li>
-	</ul>
-</div></nav>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link" href="{{ url('app_register') }}" class="">
+			Zarejestruj
+		</a>
+	{% endif %}
+</li></ul>
