--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,16 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+	<h1>Register</h1>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 mt-5 offset-md-4">
+				<form
+					action="{{ path('app_register') }}" method="post">
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+					<!-- Email input -->
+					<div class="form-outline mb-4">
+						<label class="form-label" for="username">Email:</label>
+						<input class="form-control" type="email" id="username" name="_username"/>
+					</div>
+
+					<!-- Password input -->
+					<div class="form-outline mb-4">
+						<label class="form-label" for="password">Hasło:</label>
+						<input type="password" id="password" name="_password" class="form-control"/>
+					</div>
+
+					<button type="button" class="btn btn-primary btn-block mb-4">Zarejestruj</button>
+				</form>
+			</div>
+
+		</div>
+
+	</div>
+
 {% endblock %}
