--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,20 +4,37 @@
 {# ... #}
 
 {% block body %}
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	{% if error %}
+		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
 
-    <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 mt-5 offset-md-4">
+				<form
+					action="{{ path('app_login') }}" method="post">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password"/>
+					<!-- Email input -->
+					<div class="form-outline mb-4">
+						<label class="form-label" for="username">Email:</label>
+						<input class="form-control" type="email" id="username" name="_username" value="{{ last_username }}"/>
+					</div>
 
-        {# If you want to control the URL the user is redirected to on success
-        <input type="hidden" name="_target_path" value="/account"/> #}
+					<!-- Password input -->
+					<div class="form-outline mb-4">
+						<label class="form-label" for="password">Hasło:</label>
+						<input type="password" id="password" name="_password" class="form-control"/>
+					</div>
 
-        <button type="submit">login</button>
-    </form>
+					{# If you want to control the URL the user is redirected to on success
+																			<input type="hidden" name="_target_path" value="/account"/> #}
+
+					<button type="button" class="btn btn-primary btn-block mb-4">Zaloguj</button>
+				</form>
+			</div>
+
+		</div>
+
+	</div>
+
 {% endblock %}
