deleted bootstrap, might add some new styling later

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,11 @@
 {% endblock %}
 
 {% block body %}
+
+	<header>
+		{% include 'default/_navbar.html.twig' %}
+	</header>
+
 	<h1>Register</h1>
 
 	<div class="container">
