--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,9 +6,21 @@
 
 {% block body %}
 
-	<header id="main-page__header">
-		<h1>Aplikacja wspomagająca dobór kolorystki stron internetowych</h1>
+	<header>
+		{% include 'default/_navbar.html.twig' %}
 	</header>
+
+	<nav id="main-page__header">
+		<h1>Aplikacja wspomagająca dobór kolorystki stron internetowych</h1>
+	</nav>
+
+	<li class="nav-item">
+		<a class="nav-link" href="{{ url('product') }}">Produkt</a>
+	</li>
+
+	{# <li class="nav-item">
+		<a class="nav-link" href="{{ url('product') }}">Produkt</a>
+	</li> #}
 
 
 	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
