--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,11 @@
 {# ... #}
 
 {% block body %}
+
+	<header>
+		{% include 'default/_navbar.html.twig' %}
+	</header>
+
 	{% if error %}
 		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 	{% endif %}
@@ -27,7 +32,7 @@
 					</div>
 
 					{# If you want to control the URL the user is redirected to on success
-																			<input type="hidden" name="_target_path" value="/account"/> #}
+																								<input type="hidden" name="_target_path" value="/account"/> #}
 
 					<button type="button" class="btn btn-primary btn-block mb-4">Zaloguj</button>
 				</form>
