deleted more bootstrap, clean up

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,25 +11,25 @@
 
 	<h1>Register</h1>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 mt-5 offset-md-4">
+	<div class="">
+		<div class="">
+			<div class="">
 				<form
 					action="{{ path('app_register') }}" method="post">
 
 					<!-- Email input -->
-					<div class="form-outline mb-4">
-						<label class="form-label" for="username">Email:</label>
-						<input class="form-control" type="email" id="username" name="_username"/>
+					<div class="">
+						<label class="" for="username">Email:</label>
+						<input class="" type="email" id="username" name="_username"/>
 					</div>
 
 					<!-- Password input -->
-					<div class="form-outline mb-4">
-						<label class="form-label" for="password">Hasło:</label>
-						<input type="password" id="password" name="_password" class="form-control"/>
+					<div class="">
+						<label class="" for="password">Hasło:</label>
+						<input type="password" id="password" name="_password" class=""/>
 					</div>
 
-					<button type="button" class="btn btn-primary btn-block mb-4">Zarejestruj</button>
+					<button type="button" class="">Zarejestruj</button>
 				</form>
 			</div>
 
