--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,11 +17,9 @@
    
     </head>
     <body>
-
-
-
-        {% block body %}{% endblock %}    
-        
+    
+        {% block body %}
+        {% endblock %}    
         
          {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
