--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,13 +14,13 @@
 		<h1>Aplikacja wspomagająca dobór kolorystki stron internetowych</h1>
 	</nav>
 
-	<li class="nav-item">
-		<a class="nav-link" href="{{ url('product') }}">Produkt</a>
+	<li class="">
+		<a class="" href="{{ url('product') }}">Produkt</a>
 	</li>
 
-	{# <li class="nav-item">
-		<a class="nav-link" href="{{ url('product') }}">Produkt</a>
-	</li> #}
+	<li class="">
+		<a class="" href="{{ url('company') }}">Firma</a>
+	</li>
 
 
 	{% if is_granted('IS_AUTHENTICATED_FULLY') %}
