login and register works with users data

--- a/templates/default/_navbar.html.twig
+++ b/templates/default/_navbar.html.twig
@@ -4,11 +4,11 @@
 
 <ul class="nav justify-content-start">
 	<li class="nav-item">
-		{% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+		{# {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %} #}
 			<a class="nav-link" href="{{ url('app_logout') }}" class="">
 				Wyloguj
 			</a>
-		{% else %}
+		{# {% else %} #}
 			<a class="nav-link" href="{{ url('app_login') }}" class="">
 				Zaloguj
 			</a>
@@ -18,5 +18,5 @@
 		<a class="nav-link" href="{{ url('app_register') }}" class="">
 			Zarejestruj
 		</a>
-	{% endif %}
+	{# {% endif %} #}
 </li></ul>
