--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,7 +11,7 @@
 	</header>
 
 	<nav id="main-page__header">
-		<h1>Aplikacja wspomagająca dobór kolorystki stron internetowych</h1>
+		<h1>Aplikacja wspomagająca dobór kolorystyki stron internetowych</h1>
 	</nav>
 
 	<li class="">
