--- a/templates/registration/index.html.twig
+++ b/templates/registration/index.html.twig
@@ -1,10 +1,10 @@
 {% include 'default/_form.html.twig' with {
-    page_title: 'title_user_register',
+    page_title: 'Rejestracja',
     attr: {
         method: 'POST',
         action: url('app_register')
     },
     form: form,
-    submit_label: 'action_register'|trans,
+    submit_label: 'Zarejestruj',
     back_to_list_path: 'homepage',
 } %}
