--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,14 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Licencjat
+    {{ 'title_home'|trans }}
 {% endblock %}
 
 {% block body %}
-
-	<header>
-		{% include 'default/_navbar.html.twig' %}
-	</header>
 
 	<nav id="main-page__header">
 		<h1>Aplikacja wspomagająca dobór kolorystyki stron internetowych</h1>
