--- a/templates/default/_form.html.twig
+++ b/templates/default/_form.html.twig
@@ -17,10 +17,10 @@ parameters:
 {% endblock %}
 
 {% block body %}
-<div class="">
-    <div class=""></div>
-    <div class="">
-        <h1 class="">
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 mt-5 px-2">
+        <h1 class="my-5 d-flex justify-content-center">
             {% if page_title_param is defined %}{{ page_title|trans(page_title_param) }}{% else %}{{ page_title|trans }}{% endif %}
         </h1>
 
@@ -32,19 +32,19 @@ parameters:
             }%}
         {% endif %}
         {{ form_widget(form) }}
-        <div class="">
-            <input type="submit" value="{{ submit_label|default('Zapisz') }}" class="" />
+        <div class="form-group row float-sm-right">
+            <input type="submit" value="{{ submit_label|default('action_save'|trans) }}" class="btn btn-primary" />
         </div>
         {% if back_to_list_path|default(false) %}
-            <div class="">
-                <a href="{{ url(back_to_list_path) }}" class="">
-                    {{ 'Powrót' }}
+            <div class="form-group row float-sm-left">
+                <a href="{{ url(back_to_list_path) }}" class="btn btn-link">
+                    {{ 'action_back_to_list'|trans }}
                 </a>
             </div>
         {% endif %}
         {{ form_end(form) }}
     </div>
-    <div class=""></div>
+    <div class="col-sm-3"></div>
 </div>
 
 
