--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,43 +1,43 @@
-{# templates/login/index.html.twig #}
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ 'title_log_in'|trans }}{% endblock %}
+
 {% block body %}
+<div class="row">
+    <div class="col-sm-4">
+    </div>
+    <div class="col-sm-4 mt-5">
+        <div class="card">
+            <form class="card-body" method="post">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
 
-	<header>
-		{% include 'default/_navbar.html.twig' %}
-	</header>
+                <h4 class="card-title mb-4 mt-1">{{ 'label_log_in_form'|trans }}</h4>
 
-	{% if error %}
-		<div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-	{% endif %}
+                <div class="form-group">
+                    <label for="inputEmail">Email</label>
+                    <input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword">{{ 'label_password'|trans }}</label>
+                    <input type="password" name="_password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                </div>
+                <div class="form-group">
+                    <input type="hidden" name="_csrf_token"
+                           value="{{ csrf_token('authenticate') }}"
+                    >
 
-	<div class="">
-		<div class="">
-			<div class="">
-				<form
-					action="{{ path('app_login') }}" method="post">
+                    <button class="float-right btn btn-outline-primary" type="submit">
+                        {{ 'action_login'|trans }}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="col-sm-4">
+    </div>
+</div>
 
-					<!-- Email input -->
-					<div class="">
-						<label class="" for="username">Email:</label>
-						<input class="" type="email" id="username" name="_username" value="{{ last_username }}"/>
-					</div>
-
-					<!-- Password input -->
-					<div class="">
-						<label class="" for="password">Hasło:</label>
-						<input type="password" id="password" name="_password" class=""/>
-					</div>
-
-					{# If you want to control the URL the user is redirected to on success
-																								<input type="hidden" name="_target_path" value="/account"/> #}
-
-					<button type="" class="">Zaloguj</button>
-				</form>
-			</div>
-
-		</div>
-
-	</div>
 
 {% endblock %}
