--- a/templates/generator/index.html.twig
+++ b/templates/generator/index.html.twig
@@ -9,4 +9,13 @@
 	</a>
 
 
+	<form action="{{ url('generator') }}" method="get">
+		<input type="color" name="color1">
+		<input type="color" name="color2">	
+		<input type="submit">
+	</form>
+
+	{# {{ color }} #}
+
+
 {% endblock %}
