Project Category relation

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'title_home'|trans }}
+	{{ 'title_home'|trans }}
 {% endblock %}
 
 {% block body %}
@@ -16,6 +16,10 @@
 
 	<li class="">
 		<a class="" href="{{ url('company') }}">Firma</a>
+	</li>
+
+	<li class="">
+		<a class="" href="{{ url('project_create') }}">Stwórz projekt</a>
 	</li>
 
 
