--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{ 'title_home'|trans }}
+	{{ 'title_project'|trans }}
 {% endblock %}
 
 {% block body %}
