--- a/templates/default/_navbar.html.twig
+++ b/templates/default/_navbar.html.twig
@@ -8,11 +8,13 @@
 			{{ 'title_app'|trans }}
 		</a>
 	</li>
-		<li class="nav-item">
+	{% if is_granted('ROLE_USER') %}
+	<li class="nav-item">
 		<a href="{{ url('project_index') }}" class="navbar-brand">
 			{{ 'title_project_list'|trans }}
 		</a>
 	</li>
+	{% endif %}
 	<li class="nav-item">
 		{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 			<a class="nav-link" href="{{ url('app_logout') }}" class="">
