--- a/templates/editor/product.html.twig
+++ b/templates/editor/product.html.twig
@@ -1,6 +1,7 @@
 {% block stylesheets %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 	<link rel="stylesheet" href="{{ asset('css/editor.css') }}"></link>
-	<link rel="stylesheet" href="{{ asset('css/product.css') }}"></link>
 {% endblock %}
 
 {% block body %}
@@ -32,9 +33,11 @@
 	</style>
 	<div class="wrapper">
 		<div class="settings">
-			<ul class="">
-				<li class="">
-					<a class="" href="{{ url('homepage') }}">Generator</a>
+			<ul class="nav justify-content-center">
+				<li class="nav-item">
+					<a class="nav-link" href="{{ url('homepage') }}">
+			            {{ 'title_app'|trans }}
+                    </a>
 				</li>
 			</ul>
 		</div>
@@ -47,4 +50,11 @@
             </div>
 		</div>
 	</div>
+
+    {% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    {% endblock %}
+
 {% endblock %}
