--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -10,6 +10,12 @@
 		<a href="{{ url('project_show', {id: project.id}) }}" title="{{ 'action_view'|trans }}">
 			{{ 'action_view'|trans }}
 		</a>
+		<a href="{{ url('project_edit', {id: project.id}) }}" title="{{ 'action_edit'|trans }}">
+			{{ 'action_edit'|trans }}
+		</a>
+		<a href="{{ url('project_delete', {id: project.id}) }}" title="{{ 'action_delete'|trans }}">
+			{{ 'action_delete'|trans }}
+		</a>
 		<br>
 	{% endfor %}
 {% endblock %}
