fixed base color form

--- a/templates/editor/company.html.twig
+++ b/templates/editor/company.html.twig
@@ -13,6 +13,8 @@
 		</div>
 		<div class="main-content">
 					{{ project.category.title }}
+
+					{{project.tags}}
 		</div>
 	</div>
 {% endblock %}
