--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -9,14 +9,25 @@ body {
     grid-template-areas:
         "s m";
     grid-template-rows: 1fr;
-    grid-template-columns: 150px 1fr;
+    grid-template-columns: 200px 1fr;
+}
+
+.colors__settings{
+    display: flex;
+    flex-direction: column;
 }
 
 .settings {
     background-color: rgb(204, 204, 204);
     grid-area: s;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+
 }
 
 .main-content {
     grid-area: m;
 }
+
+
