--- a/templates/editor/product.html.twig
+++ b/templates/editor/product.html.twig
@@ -1,6 +1,8 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ asset('css/editor.css') }}"></link>
+	<link rel="stylesheet" href="{{ asset('css/contrast_checker.css') }}"></link>
+
 {% endblock %}
 
 {% block body %}
@@ -47,7 +49,7 @@
 	</style>
 	<div class="wrapper">
 		<div class="settings">
-			<ul class="nav justify-content-center">
+			<ul class="nav">
 				<li class="nav-item">
 					<a class="nav-link" href="{{ url('homepage') }}">
 			            {{ 'title_app'|trans }}
@@ -55,26 +57,41 @@
                     <a class="nav-link" href="{{ url('project_colors_generate', {id: project.id}) }}">
 			            {{ 'label_generate_colors'|trans }}
                     </a>
-                   
 				</li>
-			</ul>
-        <div>
-             <form action="{{ url('project_colors_edit', {'id': project.id}) }}" method="GET">
-                        <input type="color" value="{{ project.rgbToHex(project.lightShades) }}" name="lightShades"></input>
-                        <input type="submit" value="Submit">
-                        <input type="color" value="{{ project.rgbToHex(project.lightAccent) }}" name="lightAccent"></input>
-                        <input type="submit" value="Submit">
-                        <input type="color" value="{{ project.rgbToHex(project.baseColor) }}" name="baseColor"></input>
-                        <input type="submit" value="Submit">
-                        <input type="color" value="{{ project.rgbToHex(project.darkAccent) }}" name="darkAccent"></input>
-                        <input type="submit" value="Submit">
-                        <input type="color" value="{{ project.rgbToHex(project.darkShades) }}" name="darkShades"></input>
-                        <input type="submit" value="Submit">
-            </form>            
+			</ul>  
+
+           <form action="{{ url('project_colors_edit', {'id': project.id}) }}" method="GET" class="colors__settings">
+                <div>
+                    {{ project.rgbToHex(project.lightShades) }}
+                    <input type="color" value="{{ project.rgbToHex(project.lightShades) }}" name="lightShades"></input>
+                    <input type="submit" value="Submit">
+                </div>
+                <div>
+                    {{ project.rgbToHex(project.lightAccent) }}
+                    <input type="color" value="{{ project.rgbToHex(project.lightAccent) }}" name="lightAccent"></input>
+                    <input type="submit" value="Submit">
+                </div>
+                <div>
+                    {{ project.rgbToHex(project.baseColor) }}
+                    <input type="color" value="{{ project.rgbToHex(project.baseColor) }}" name="baseColor"></input>
+                    <input type="submit" value="Submit">
+                </div>
+                <div>
+                    {{ project.rgbToHex(project.darkAccent) }}
+                    <input type="color" value="{{ project.rgbToHex(project.darkAccent) }}" name="darkAccent"></input>
+                    <input type="submit" value="Submit">
+                </div>
+                <div>
+                    {{ project.rgbToHex(project.darkShades) }}
+                    <input type="color" value="{{ project.rgbToHex(project.darkShades) }}" name="darkShades"></input>
+                    <input type="submit" value="Submit">
+                </div>
+            </form>   
+
+            {% include 'editor/contrast_checker.html.twig' %}
+
         </div>
-        <div>
-        </div>
-		</div>
+        
 		<div class="main-content">
 			<div class="graphic">
                 <div class="lightShades">
@@ -97,6 +114,9 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinycolor/1.4.1/tinycolor.js"></script>
+    <script src="{{ asset('js/contrast_checker.js') }}"></script>
     {% endblock %}
+
 
 {% endblock %}
