--- a/templates/editor/contrast_checker.html.twig
+++ b/templates/editor/contrast_checker.html.twig
@@ -16,7 +16,7 @@
   </svg>
   
   <header class="container__header header">
-    <p class="header__text">Contrast Ratio Checker</p>
+    <p class="header__text">Kontrast</p>
     {# <button type="button" class="header__button" js-swap aria-label="Swap foreground and background colors">
       <svg aria-hidden="true"><use xlink:href="#swap"></use></svg>
     </button> #}
@@ -25,14 +25,14 @@
   <section class="container__body">
     <div class="input input--container">
       <input type="text" id="foreground" placeholder="&nbsp;" name="foreground" value="{{ project.rgbToHex(project.lightShades) }}" spellcheck="false" class="input__input" js-foreground>
-      <label for="foreground" class="input__label">Foreground:</label>
-      <p class="input__error" js-foreground-err>Color is incorrect</p>
+      <label for="foreground" class="input__label">Tekst:</label>
+      <p class="input__error" js-foreground-err>Wprowadzony kolor jest nieprawidłowy</p>
       <input js-foreground-color-input class="input__color input__color--foreground" type="color" aria-hidden="true">
     </div>
     <div class="input input--container">
       <input type="text" id="background" placeholder="&nbsp;" name="background" value="{{ project.rgbToHex(project.darkShades) }}" spellcheck="false" class="input__input" js-background>
-      <label for="background" class="input__label">Background:</label>
-      <p class="input__error" js-background-err>Color is incorrect</p>
+      <label for="background" class="input__label">Tło:</label>
+      <p class="input__error" js-background-err>Wprowadzony kolor jest nieprawidłowy</p>
       <input js-background-color-input class="input__color input__color--background" type="color" aria-hidden="true">
     </div>
   </section>
@@ -45,26 +45,26 @@
   </section> #}
   
   <section class="container__body wcag wcag--container">
-    <p class="wcag__ratio"><a href="https://www.w3.org/TR/WCAG21/#contrast-minimum" target="_blank" title="Web Content Accessibility Guidelines"><abbr title="Web Content Accessibility Guidelines">WCAG</abbr></a> Contrast ratio: <output id="output" js-output>4.9</output></p>
+    <p class="wcag__ratio"><a href="https://www.w3.org/TR/WCAG21/#contrast-minimum" target="_blank" title="Web Content Accessibility Guidelines"><abbr title="Web Content Accessibility Guidelines">WCAG</abbr></a> Współczynnik kontrastu: <output id="output" js-output>4.9</output></p>
     <p class="wcag__level wcag__level--aa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-large="pass"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aa-large="fail"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AA&nbsp; large font size (3:1)</span>
+      <span class="wcag__level-text">AA&nbsp; duży font (3:1)</span>
     </p>
     <p class="wcag__level wcag__level--aa-small">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aa-small="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aa-small="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AA&nbsp; small font size (4.5:1)</span>
+      <span class="wcag__level-text">AA&nbsp; mały font (4.5:1)</span>
     </p>
     <p class="wcag__level wcag__level--aaa-large">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aaa-large="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aaa-large="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AAA large font size (4.5:1)</span>
+      <span class="wcag__level-text">AAA duży font (4.5:1)</span>
     </p>
     <p class="wcag__level wcag__level--aaa-small">
       <span class="wcag__level-icon wcag__level-icon--pass" js-aaa-small="pass" aria-label="passes"><svg role="img" aria-label="pass"><use xlink:href="#pass"></use></svg></span>
       <span class="wcag__level-icon wcag__level-icon--fail" js-aaa-small="fail" aria-label="fails"><svg role="img" aria-label="fail"><use xlink:href="#fail"></use></svg></span>
-      <span class="wcag__level-text">AAA small font size (7:1)</span>
+      <span class="wcag__level-text">AAA mały font (7:1)</span>
     </p>
   </section>
 
